--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
-    
+<head>
+	<title>Inicio</title>
+</head>
+<body>
+	<h1>Esto es solo una prueba beta!!
+	<ul>
+		<li><a href="html/1.html">Hola</a>
+		<li><a href="2.html">2</a>
+</body>
 </html>
