--- a/Calculadora pro master 5000/calcu/index.html
+++ b/Calculadora pro master 5000/calcu/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> !-->
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                     <td><input type="button" value="Borrar" onClick="document.calcu.ans.value=' '" id="borrar"></td>
             </tr>
             <tr>
-                    <td><center><input type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
+                    <td><center><input class="materialize-red" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
                     <td><center><input type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
                     <td><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
                     <td><center><input type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
