--- a/Calculadora pro master 5000/calcu/index.html
+++ b/Calculadora pro master 5000/calcu/index.html
@@ -18,7 +18,7 @@
                     <td><input type="button" value="Borrar" onClick="document.calcu.ans.value=' '" id="borrar"></td>
             </tr>
             <tr>
-                    <td><center><input class="materialize-red" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
+                    <td class="materialize-red"><center><input class="" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
                     <td><center><input type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
                     <td><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
                     <td><center><input type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
