Esta es la primera modificacion con los diseños de loas tablas de los botones

--- a/Calculadora pro master 5000/calcu/index.html
+++ b/Calculadora pro master 5000/calcu/index.html
@@ -19,9 +19,9 @@
             </tr>
             <tr>
                     <td class="materialize-red"><center><input class="" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
-                    <td><center><input type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
-                    <td><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
-                    <td><center><input type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
+                    <td class=""><center><input type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
+                    <td class="materialize-red"><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
+                    <td class=""><center><input type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
             </tr>
             <tr>
                     <td><center><input type="button" value="4" onClick="document.calcu.ans.value+='4'"></center></td>
@@ -44,6 +44,8 @@
             </tr>
              </table>
             </form>
+
+            <script src="js/materialize.min.js"></script>
     
 </body>
 </html>
