--- a/Calculadora pro master 5000/calcu/index.html
+++ b/Calculadora pro master 5000/calcu/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> !-->
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+    <script src="js/materialize.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -19,33 +20,33 @@
             </tr>
             <tr>
                     <td class="materialize-red"><center><input class="" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
-                    <td class=""><center><input type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
+                    <td class=""><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
                     <td class="materialize-red"><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
-                    <td class=""><center><input type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
+                    <td class="g"><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
             </tr>
             <tr>
-                    <td><center><input type="button" value="4" onClick="document.calcu.ans.value+='4'"></center></td>
-                    <td><center><input type="button" value="5" onClick="document.calcu.ans.value+='5'"></center></td>
-                    <td><center><input type="button" value="6" onClick="document.calcu.ans.value+='6'"></center></td>
-                    <td><center><input type="button" value="-" onClick="document.calcu.ans.value+='-'"></center></td>  
+                    <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="4" onClick="document.calcu.ans.value+='4'"></center></td>
+                    <td class="materialize-red"><center><input type="button" value="5" onClick="document.calcu.ans.value+='5'"></center></td>
+                    <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="6" onClick="document.calcu.ans.value+='6'"></center></td>
+                    <td class="materialize-red"><center><input type="button" value="-" onClick="document.calcu.ans.value+='-'"></center></td>  
             </tr>
             <tr>
-                <td><center><input type="button" value="1" onClick="document.calcu.ans.value+='1'"></center></td>
-                <td><center><input type="button" value="2" onClick="document.calcu.ans.value+='2'"></center></td>
-                <td><center><input type="button" value="3" onClick="document.calcu.ans.value+='3'"></center></td>
-                <td><center><input type="button" value="+" onClick="document.calcu.ans.value+='+'"></center></td>
+                <td class="materialize-red"><center><input type="button" value="1" onClick="document.calcu.ans.value+='1'"></center></td>
+                <td><center><input class= "btn-floating btn-large waves-effect waves-light red"type="button" value="2" onClick="document.calcu.ans.value+='2'"></center></td>
+                <td class="materialize-red"><center><input type="button" value="3" onClick="document.calcu.ans.value+='3'"></center></td>
+                <td><center><input class= "btn-floating btn-large waves-effect waves-light red"type="button" value="+" onClick="document.calcu.ans.value+='+'"></center></td>
             </tr>
             <tr>
                     
-                <td><center><input type="button" value="^" onClick="document.calcu.ans.value+='^'"></center></td>
-                <td><center><input type="button" value="0" onClick="document.calcu.ans.value+='0'"></center></td>
-                <td><center><input type="button" value="," onClick="document.calcu.ans.value+=','"></center></td>
-                <td><center><input type="button" value="=" onClick="document.calcu.ans.value=eval(document.calcu.ans.value)"></center></td>
+                <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="^" onClick="document.calcu.ans.value+='^'"></center></td>
+                <td class="materialize-red"><center><input type="button" value="0" onClick="document.calcu.ans.value+='0'"></center></td>
+                <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="," onClick="document.calcu.ans.value+=','"></center></td>
+                <td class="materialize-red"><center><input type="button" value="=" onClick="document.calcu.ans.value=eval(document.calcu.ans.value)"></center></td>
             </tr>
              </table>
             </form>
 
-            <script src="js/materialize.min.js"></script>
+
     
 </body>
 </html>
