--- a/Calculadora pro master 5000/calcu/index.html
+++ b/Calculadora pro master 5000/calcu/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> !-->
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
-    <script src="js/materialize.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,33 +14,33 @@
 <form name="calcu">
     <table border="0" cellspacing="1" cellpadding="1"  height="450" bgcolor="#3A3E41">  
             <tr>
-                    <input type="textfield" name="ans" value="">
-                    <td><input type="button" value="Borrar" onClick="document.calcu.ans.value=' '" id="borrar"></td>
+                    <input style="width: 100%; height: 50px; font-size: 20px;" type="textfield"  name="ans" value="">
+                    <td><input type="button" class="waves-effect waves-light btn" value="Borrar" onClick="document.calcu.ans.value=' '" id="borrar"></td>
             </tr>
             <tr>
-                    <td class="materialize-red"><center><input class="" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
+                    <td class="materialize-red"><center><input class="btn-floating btn-large waves-effect waves-light gray" type="button" value="7" onClick="document.calcu.ans.value+='7'"></center></td>
                     <td class=""><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="8" onClick="document.calcu.ans.value+='8'"></center></td>
-                    <td class="materialize-red"><center><input type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
+                    <td class="materialize-red"><center><input class="btn-floating btn-large waves-effect waves-light gray" type="button" value="9" onClick="document.calcu.ans.value+='9'"></center></td>
                     <td class="g"><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="X" onClick="document.calcu.ans.value+='*'"></center></td>
             </tr>
             <tr>
                     <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="4" onClick="document.calcu.ans.value+='4'"></center></td>
-                    <td class="materialize-red"><center><input type="button" value="5" onClick="document.calcu.ans.value+='5'"></center></td>
+                    <td class="materialize-red"><center><input type="button"  class="btn-floating btn-large waves-effect waves-light gray"value="5" onClick="document.calcu.ans.value+='5'"></center></td>
                     <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="6" onClick="document.calcu.ans.value+='6'"></center></td>
-                    <td class="materialize-red"><center><input type="button" value="-" onClick="document.calcu.ans.value+='-'"></center></td>  
+                    <td class="materialize-red"><center><input type="button" value="-" class="btn-floating btn-large waves-effect waves-light gray" onClick="document.calcu.ans.value+='-'"></center></td>  
             </tr>
             <tr>
-                <td class="materialize-red"><center><input type="button" value="1" onClick="document.calcu.ans.value+='1'"></center></td>
-                <td><center><input class= "btn-floating btn-large waves-effect waves-light red"type="button" value="2" onClick="document.calcu.ans.value+='2'"></center></td>
-                <td class="materialize-red"><center><input type="button" value="3" onClick="document.calcu.ans.value+='3'"></center></td>
+                <td class="materialize-red"><center><input type="button" class="btn-floating btn-large waves-effect waves-light gray"value="1" onClick="document.calcu.ans.value+='1'"></center></td>
+                <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="2" onClick="document.calcu.ans.value+='2'"></center></td>
+                <td class="materialize-red"><center><input type="button" value="3" class="btn-floating btn-large waves-effect waves-light gray" onClick="document.calcu.ans.value+='3'"></center></td>
                 <td><center><input class= "btn-floating btn-large waves-effect waves-light red"type="button" value="+" onClick="document.calcu.ans.value+='+'"></center></td>
             </tr>
             <tr>
                     
                 <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="^" onClick="document.calcu.ans.value+='^'"></center></td>
-                <td class="materialize-red"><center><input type="button" value="0" onClick="document.calcu.ans.value+='0'"></center></td>
+                <td class="materialize-red"><center><input type="button" value="0" class="btn-floating btn-large waves-effect waves-light gray" onClick="document.calcu.ans.value+='0'"></center></td>
                 <td><center><input class= "btn-floating btn-large waves-effect waves-light red" type="button" value="," onClick="document.calcu.ans.value+=','"></center></td>
-                <td class="materialize-red"><center><input type="button" value="=" onClick="document.calcu.ans.value=eval(document.calcu.ans.value)"></center></td>
+                <td class="materialize-red"><center><input type="button" value="=" class="btn-floating btn-large waves-effect waves-light gray" onClick="document.calcu.ans.value=eval(document.calcu.ans.value)"></center></td>
             </tr>
              </table>
             </form>
@@ -49,4 +48,5 @@
 
     
 </body>
+<!-- <script src="js/materialize.min.js"></script> !-->
 </html>
